[project]
name = "daytracker"
version = "0.1.0"
description = "Romanian-language Telegram bot for daily nutrition & activity tracking (single user)."
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.13,<4",
    "SQLAlchemy[asyncio]>=2.0,<3",
    "aiosqlite>=0.20",
    "python-dotenv>=1.0",
    "google-genai>=1.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "black>=24.0",
]

[project.scripts]
daytracker = "daytracker.__main__:run"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["daytracker*"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "W"]
